# connect4_ai_website

./: Cargo.toml  README.md  _redirects  generation_1040_ai.json  index.css  index.html  index.js  netlify.toml
pkg/: connect4_ai_website.d.ts  connect4_ai_website.js  connect4_ai_website_bg.wasm  connect4_ai_website_bg.wasm.d.ts
src/: lib.rs
